Update page with first version of content
* Who should use this
* Paying for travel
* Booking accommodations
* Booking a rental car
* Booking a flight
* Booking a train
* Policies
* Contact us

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <body>
 
     <div id="vapp">
+
+        <!-- TODO(mkewins): Add ALPHA banner -->
+        <!-- (ALPHA) This is a prototype. This site will change as we test ideas. -->
+
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="container">
@@ -43,6 +47,7 @@
                 </div>
             </div>
         </nav>
+        <!-- End Navigation -->
 
 
         <!-- Page Content -->
@@ -50,27 +55,86 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-10">
                     <div class="jumbotron" style="background:transparent !important">
-                        <div class="text-center">
-                            <img src="./images/cfc-web-logo.png" alt="Code for Canada Logo" width=258
-                                style="margin-right: 30px;">
-                            <img src="./images/nextgen-web-logo-en.png"
-                                alt="Public Services and Procurement Canada - NextGen Travel Program Logo" width=365>
-                        </div>
 
                         <br />
 
-                        <h1 class="display-4 text-center">Project Spoon</h1>
+                        <h1 class="display-4 text-center">Project Spoon: Travelling without a GC booking tool</h1>
+
+                        <br />
+                        <br />
+
+                        <h2>Who should use this</h2>
+
                         <p class="lead">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque eu ultrices vitae auctor eu augue ut. Vehicula ipsum a arcu cursus vitae. Arcu cursus vitae congue mauris rhoncus. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Gravida neque convallis a cras semper auctor neque vitae tempus. At auctor urna nunc id cursus metus aliquam eleifend. Ipsum dolor sit amet consectetur. Tincidunt arcu non sodales neque sodales ut etiam. Dignissim convallis aenean et tortor at risus viverra adipiscing. A erat nam at lectus urna duis. Purus sit amet volutpat consequat mauris nunc congue nisi vitae. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Ultrices gravida dictum fusce ut. Egestas congue quisque egestas diam in arcu cursus.
-                        </p>
-                        <p class="lead">
-                            Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Vel orci porta non pulvinar neque. Id interdum velit laoreet id donec. Faucibus ornare suspendisse sed nisi lacus sed viverra. Dignissim sodales ut eu sem integer vitae. Lorem ipsum dolor sit amet consectetur adipiscing. Augue neque gravida in fermentum et sollicitudin ac orci. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Viverra mauris in aliquam sem fringilla ut morbi. Sem integer vitae justo eget magna fermentum iaculis. Nunc eget lorem dolor sed viverra. Tortor dignissim convallis aenean et tortor. Egestas fringilla phasellus faucibus scelerisque eleifend donec.
+                            Use this page if you are a part of Code for Canada and NextGen Travel’s “No travel booking tool” pilot. Here are some resources and tips to help you book travel for work.
                         </p>
 
                         <hr class="my-4">
+
+                        <!-- PAYMENT -->
+                        <h5>Paying for your travel</h5>
                         <p>
-                            Vitae auctor eu augue ut lectus arcu bibendum at varius. Mauris pharetra et ultrices neque ornare aenean. Molestie a iaculis at erat pellentesque. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec.
+                            Use a travel card to book all your travel. Either your personal credit card, or your individual designated travel card, which has a limit of $5,000 CAD.
                         </p>
+                        <br />
+
+                        <!-- ACCOMMODATIONS -->
+                        <h5>Booking accommodations</h5>
+                        <p>
+                            Use the <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits table</a> to find the spending limits for accommodation at your destination.
+                            <!-- TODO(mkewins): Find policy, flesh out.
+                            <br />
+                            <br />
+                            You should book at hotels that are something something.-->
+                            Book directly with the hotel or through the service of your choice.
+                        </p>
+                        <br />
+
+                        <!-- RENTAL CAR -->
+                        <h5>Booking a rental car</h5>
+                        <p>
+                            Use the <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/rechercher-search-4-eng.aspx" target="_blank">car search page</a> to find rental car companies and daily rates.
+                            Book directly through the company's website or over the phone. Don't forget to give the government rate code!
+                        </p>
+                        <br />
+
+                        <!-- FLIGHTS -->
+                        <h5>Booking a flight</h5>
+                        <p>
+                            You must take economy class, and choose the cheapest fare whenever possible. 
+                            Book with the service of your choice.
+                        </p>
+                        <br />
+
+                        <!-- TRAIN -->
+                        <h5>Booking a train</h5>
+                        <p>
+                            Book directly through <a href="https://www.viarail.ca/" target="_blank">VIA Rail</a> for travel within Canada.
+                            <br />
+                            <br />
+                            The standard for rail travel is the next highest class after the full economy class. You are allowed to book business class!
+                            <br />
+                            <br />
+                            For an 11% discount, use the Government of Canada discount code when booking: <a href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada" target="_blank">700804</a>.
+                        </p>
+                        <br />
+
+                        <!-- POLICIES -->
+                        <h5>Policies</h5>
+                        <p>
+                            Please refer to the National Joint Council policies that govern travel.
+                            (<a href="https://www.njc-cnm.gc.ca/directive/d10/en" target="_blank">English</a>)
+                            (<a href="https://www.njc-cnm.gc.ca/directive/d10/fr" target="_blank">Francais</a>)
+                        </p>
+                        <br />
+
+                        <hr class="my-4">
+
+                        <h5>Contact us</h5>
+                        <p>
+                            <a href="mailto:madeleine.ewins@tpsgc-pwgsc.gc.ca">Email us here if you have questions.</a>
+                        </p>
+
                     </div>
                 </div>
                 <br />
@@ -79,6 +143,8 @@
             <br>
             <br>
         </div>
+        <!-- End Page Content -->
+
     </div>
 
     <!-- Bootstrap core JavaScript -->
