Add ALPHA banner + add link to Lanyon (commented)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
 
     <div id="vapp">
 
-        <!-- TODO(mkewins): Add ALPHA banner -->
-        <!-- (ALPHA) This is a prototype. This site will change as we test ideas. -->
+        <!-- ALPHA Banner -->
+        <div class="" style="background-color: #FAF2CC; text-align: center;">
+            <div class="container py-2">
+                <button
+                    style="background: #FEC04F; border: 1px solid #000000; border-radius: 20px;"><strong>ALPHA</strong></button>
+                <span>&nbsp;&nbsp;This is a prototype. This site will change as we test ideas.</span>
+            </div>
+        </div>
+        <!-- End ALPHA Banner -->
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
@@ -85,7 +92,10 @@
                             <!-- TODO(mkewins): Find policy, flesh out.
                             <br />
                             <br />
-                            You should book at hotels that are something something.-->
+                            You should book at hotels that are something something.
+
+                            You can also search for hotels with negotiated rates in the <a href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx" target="_blank">Government of Canada Accommodation Directory</a>.
+                            -->
                             Book directly with the hotel or through the service of your choice.
                         </p>
                         <br />
