--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <!-- PAYMENT -->
                         <h5>Paying for your travel</h5>
                         <p>
-                            Use a travel card to book all your travel. Either your personal credit card, or your individual designated travel card, which has a limit of $5,000 CAD.
+                            Either use your personal credit card, or your <a href="https://isuite6.hrgworldwide.com/gcportal/en-ca/travelcard/applyforanidtc.aspx" target="_blank">individual designated travel card</a>, which has a limit of $5,000 CAD.
                         </p>
                         <br />
 
