--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Project Spoon</title>
+    <title>Self-service booking for government travel</title>
     <!-- Bootstrap core CSS -->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+      <style type="text/css">
+        
+
+      </style>  
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://unpkg.com/vuex"></script>
     <script src="js/vue-clipboard.min.js"></script>
@@ -65,30 +70,40 @@
 
                         <br />
 
-                        <h1 class="display-4 text-center">Project Spoon: Travelling without a GC booking tool</h1>
+                        <h1 class="display-4 text-center">Self-service booking for government travel</h1>
 
                         <br />
                         <br />
 
-                        <h2>Who should use this</h2>
+                        <h3>You've been approved to travel - time to book!</h3>
 
                         <p class="lead">
-                            Use this page if you are a part of Code for Canada and NextGen Travel’s “No travel booking tool” pilot. Here are some resources and tips to help you book travel for work.
+Please note that the following only applies to domestic travel. If you are travelling outside of Canada, please refer directly to the <a href="https://www.njc-cnm.gc.ca/directive/d10/en">National Joint Council Travel Directive</a>. Please bring your government identification when you travel, as you may be asked to produce it if your trip involves government rates.</p>
                         </p>
 
                         <hr class="my-4">
 
-                        <!-- PAYMENT -->
-                        <h5>Paying for your travel</h5>
-                        <p>
-                            Either use your personal credit card, or your <a href="https://isuite6.hrgworldwide.com/gcportal/en-ca/travelcard/applyforanidtc.aspx" target="_blank">individual designated travel card</a>, which has a limit of $5,000 CAD.
-                        </p>
-                        <br />
 
                         <!-- ACCOMMODATIONS -->
-                        <h5>Booking accommodations</h5>
-                        <p>
-                            Use the <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits table</a> to find the spending limits for accommodation at your destination.
+                        <h5>Accommodations</h5>
+                        <p>You're expected to adhere to established <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits</a> for commercial accommodations. This rate is for the nightly room rate only, and is not expected to cover taxes and fees. A list of hotels with negotiated rates can be found in the <a href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx" target="_blank">Government of Canada Accommodation Directory</a>, but you may book with the provider of your choice.</p>
+
+Selecting accommodations:
+                        <ul>
+                            <li>Consider location when booking; will additional transportation costs be accrued based on this booking?</li>
+                            <li>Is parking included (if needed?)</li>
+                            <li>Ask whether a government rate is available</li>
+                            <li>Do not select a non-refundable/pre-paid rate</li>
+                            <li>Some departments do not want their employees staying in AirBnbs. Ask before booking if you're unsure.</li>
+                        </ul>
+
+Expense claim considerations: 
+                            <ul><li>Provide an explanation in your expense report if you're unable to adhere to the posted city rates.</li>
+                             <li>Do not charge meals to your room. Pay for any additional costs separately</li></ul>
+
+
+    <p>If you prefer to stay in private accommodations, you will receive an allowance of $50/night.</p>
+
                             <!-- TODO(mkewins): Find policy, flesh out.
                             <br />
                             <br />
@@ -96,53 +111,47 @@
 
                             You can also search for hotels with negotiated rates in the <a href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx" target="_blank">Government of Canada Accommodation Directory</a>.
                             -->
-                            Book directly with the hotel or through the service of your choice.
-                        </p>
+                
                         <br />
+
+
+ <!-- FLIGHTS -->
+                        <h5>Transportation</h5>
+                        <h6>Air travel</h6>
+                        <p>Consider all  costs when booking air travel. In some cases, it may be more cost-effective to book a higher class if it includes baggage fees. As well, consider a refundable or exchangable fare if the dates of your trip are likely to change (meeting dates changed, etc).</p>
+                        <p>You may book with the service of your choice (direct with a carrier or via an aggregator).</p><br/>
+
+                        <h6>Rail</h6>
+                        <p>The standard for rail travel is the next highest class after the full economy class. </p>
+
+                        <p>You may use government code <strong>700804</strong> to receive an 11% discount purchasing directly from ViaRail. More information is available on the <a href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada" target="_blank">ViaRail corporate discount page.</a> </p>
+                        <br />
+
 
                         <!-- RENTAL CAR -->
-                        <h5>Booking a rental car</h5>
-                        <p>
-                            Use the <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/rechercher-search-4-eng.aspx" target="_blank">car search page</a> to find rental car companies and daily rates.
-                            Book directly through the company's website or over the phone. Don't forget to give the government rate code!
-                        </p>
+                        <h6>Rental car</h6>
+                        <p>The Government of Canada has established corporate rates with car rental companies. Please use the <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/rechercher-search-4-eng.aspx" target="_blank">car search page</a> to look up rates and find the applicable discount code. You may then book with the provider directly. </p>
+<p>Expense claim considerations:</p> 
+                            <ul><li>Provide an explanation in your expense report if you require a different vehicle class.</li></ul>
                         <br />
 
-                        <!-- FLIGHTS -->
-                        <h5>Booking a flight</h5>
-                        <p>
-                            You must take economy class, and choose the cheapest fare whenever possible. 
-                            Book with the service of your choice.
-                        </p>
+
+                        <!-- PAYMENT -->
+                        <h5>Paying for your travel</h5>
+                        <p>You're encouraged to <a href="https://isuite6.hrgworldwide.com/gcportal/en-ca/travelcard/applyforanidtc.aspx" target="_blank">apply for</a> and use an individual designated travel card. </p>
+                        <ul>
+                            <li>Has a starting limit of $5,000 CDN</li>
+                            <li>Does not affect your personal credit limit</li>
+                            <li>Offers 60-day interest-free period</li>
+                            <li>Can simplify your expense claim reporting</li>
+                        </ul>
                         <br />
 
-                        <!-- TRAIN -->
-                        <h5>Booking a train</h5>
-                        <p>
-                            Book directly through <a href="https://www.viarail.ca/" target="_blank">VIA Rail</a> for travel within Canada.
-                            <br />
-                            <br />
-                            The standard for rail travel is the next highest class after the full economy class. You are allowed to book business class!
-                            <br />
-                            <br />
-                            For an 11% discount, use the Government of Canada discount code when booking: <a href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada" target="_blank">700804</a>.
-                        </p>
-                        <br />
-
-                        <!-- POLICIES -->
-                        <h5>Policies</h5>
-                        <p>
-                            Please refer to the National Joint Council policies that govern travel.
-                            (<a href="https://www.njc-cnm.gc.ca/directive/d10/en" target="_blank">English</a>)
-                            (<a href="https://www.njc-cnm.gc.ca/directive/d10/fr" target="_blank">Francais</a>)
-                        </p>
-                        <br />
 
                         <hr class="my-4">
 
                         <h5>Contact us</h5>
-                        <p>
-                            <a href="mailto:madeleine.ewins@tpsgc-pwgsc.gc.ca">Email us here if you have questions.</a>
+                        <p><a href="mailto:madeleine.ewins@tpsgc-pwgsc.gc.ca">Email us</a> with any questions or suggestions.</a>
                         </p>
 
                     </div>
