changed the styling to look like the guidebook (aurora)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="row">
                         <div class="col-8">
                             <h4 class="mb-3 mt-3 h4">
-                                Self-service Booking for Government Travel
+                                Self-service booking for government travel
                             </h4>
                         </div>
                         <!--div class="col-4 align-self-center">
@@ -77,11 +77,11 @@
                             </ol>
                         </nav>
                     </div>
-                    <h1 class="sr-only">Book Travel</h1>
+                    <h1 class="sr-only">Self-service booking for government travel</h1>
                     <div class="hero-holder">
                         <div class="container">
-                            <h2 class="display-5">Book Travel</h2>
-                            <p class="lead">Please note that the following only applies to domestic travel. If you are travelling outside of Canada, please refer directly to the <a href="https://www.njc-cnm.gc.ca/directive/d10/en">National Joint Council Travel Directive</a>. Please bring your government identification when you travel, as you may be asked to produce it if your trip involves government rates.</p>
+                            <h2 class="display-5">Self-service booking for government travel</h2>
+                            <p>Please note that the following only applies to domestic travel. If you are travelling outside of Canada, please refer directly to the <a href="https://www.njc-cnm.gc.ca/directive/d10/en">National Joint Council Travel Directive</a>. Please bring your government identification when you travel, as you may be asked to produce it if your trip involves government rates.</p>
                             </p>
                         </div>
                     </div>
@@ -154,6 +154,7 @@ Expense claim considerations:
                             <li>Offers 60-day interest-free period</li>
                             <li>Can simplify your expense claim reporting</li>
                         </ul>
+                        <p>If you requested a travel advance, you should receive it within 10 days of the approval of your trip.</p>
                                         
                                         </div>
                                     </div>
@@ -166,9 +167,11 @@ Expense claim considerations:
                                 <h4>Resources</h4>
                                 <ul>
                                     <li><a target="_blank" href="https://www.njc-cnm.gc.ca/directive/d10/v238/en">National Joint Council (NJC) Travel Directive</a></li>
-                                    <li><a target="_blank" href="https://www.njc-cnm.gc.ca/directive/app_d.php?lang=en">National Joint Council (NJC) Travel Directive - Appendix D - Allowances</a></li>
-                                    <li><a target="_blank" href="http://rehelv-acrd.tpsgc-pwgsc.gc.ca/acrds/index-eng.aspx">Accommodation and Car Rental Directory (ACRD)</a></li>
-                                    <li><a target="_blank" href="https://www.viarail.ca/">VIA Rail</a></li>
+                                    <li><a target="_blank" href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/acrds/preface-eng.aspx#canadian">City Rate Limits (Accommodation and Car Rental Directory)</a></li>
+                                    <li><a target="_blank" href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx">Hotel Directory</a></li>
+                                    <li><a target="_blank" href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada">VIA Rail</a></li>
+                                    <li><a target="_blank" href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/acrds/rechercher-search-4-eng.aspx">Car Rental List</a></li>
+                                    <li><a href="https://isuite6.hrgworldwide.com/gcportal/en-ca/travelcard/applyforanidtc.aspx" target="_blank">Individual Designated Travel Card application</a></li>
                                 </ul>
                                 <br>
                                 <h4>Suggest an update</h4>
