Formatting and disclaimer
Added a bit of a disclaimer saying this is only for the pilot.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                     <div class="hero-holder">
                         <div class="container">
                             <h2 class="display-5">Self-service booking for government travel</h2>
-                            <p>Please note that the following only applies to domestic travel. If you are travelling outside of Canada, please refer directly to the <a href="https://www.njc-cnm.gc.ca/directive/d10/en">National Joint Council Travel Directive</a>. Please bring your government identification when you travel, as you may be asked to produce it if your trip involves government rates.</p>
+                            <p><strong>This is a pilot, for select travellers. Please continue to use your existing booking processes unless you have been notified you're part of the pilot.</strong>
+                              Please note that the following only applies to domestic travel. If you are travelling outside of Canada, please refer directly to the <a href="https://www.njc-cnm.gc.ca/directive/d10/en">National Joint Council Travel Directive</a>. Please bring your government identification when you travel, as you may be asked to produce it if your trip involves government rates.</p>
                             </p>
                         </div>
                     </div>
@@ -95,7 +96,7 @@
                                             <p style="display:inline">
                         You're expected to adhere to established <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits</a> for commercial accommodations. This rate is for the nightly room rate only, and is not expected to cover taxes and fees. A list of hotels with negotiated rates can be found in the <a href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx" target="_blank">Government of Canada Accommodation Directory</a>, but you may book with the provider of your choice.</p>
 
-Selecting accommodations:
+<p>Selecting accommodations:</p>
                         <ul>
                             <li>Consider location when booking; will additional transportation costs be accrued based on this booking?</li>
                             <li>Is parking included (if needed?)</li>
@@ -104,7 +105,7 @@ Selecting accommodations:
                             <li>Some departments do not want their employees staying in AirBnbs. Ask before booking if you're unsure.</li>
                         </ul>
 
-Expense claim considerations: 
+                    <p>Expense claim considerations: </p>
                             <ul><li>Provide an explanation in your expense report if you're unable to adhere to the posted city rates.</li>
                              <li>Do not charge meals to your room. Pay for any additional costs separately</li></ul>
 
