A few content updates:
* Remote link to Lanyon
* Add economy class specification for flights
* Add business class specification for rail
* ViaRail --> VIA Rail

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                         <h4>Accommodations</h4>
                                         <div class="card-content" style="margin-left: 23px;">
                                             <p style="display:inline">
-                        You're expected to adhere to established <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits</a> for commercial accommodations. This rate is for the nightly room rate only, and is not expected to cover taxes and fees. A list of hotels with negotiated rates can be found in the <a href="https://hoteldirectory.lanyon.com/Directory_Search_Results.aspx" target="_blank">Government of Canada Accommodation Directory</a>, but you may book with the provider of your choice.</p>
+                        You're expected to adhere to established <a href="https://rehelv-acrd.tpsgc-pwgsc.gc.ca/preface-eng.aspx#canadian" target="_blank">city rate limits</a> for commercial accommodations, and booking with the provider of your choice. This rate is for the nightly room rate only, and is not expected to cover taxes and fees.</p>
 
-<p>Selecting accommodations:</p>
+                        <p>Selecting accommodations:</p>
                         <ul>
                             <li>Consider location when booking; will additional transportation costs be accrued based on this booking?</li>
                             <li>Is parking included (if needed?)</li>
@@ -124,13 +124,13 @@
                                         <h4>Transportation</h4>
                                         <div class="card-content" style="margin-left: 23px;">
                                             <h5>Air travel</h5>
-                        <p>Consider all  costs when booking air travel. In some cases, it may be more cost-effective to book a higher class if it includes baggage fees. As well, consider a refundable or exchangable fare if the dates of your trip are likely to change (meeting dates changed, etc).</p>
+                        <p>Consider all  costs when booking air travel. In some cases, it may be more cost-effective to book a higher class if it includes baggage fees; however, it must be within the economy fare class. As well, consider a refundable or exchangable fare if the dates of your trip are likely to change (meeting dates changed, etc).</p>
                         <p>You may book with the service of your choice (direct with a carrier or via an aggregator).</p><br/>
 
                         <h5>Rail</h5>
-                        <p>The standard for rail travel is the next highest class after the full economy class. </p>
+                        <p>The standard for rail travel is the next highest class after the full economy class, which is business class. </p>
 
-                        <p>You may use government code <strong>700804</strong> to receive an 11% discount purchasing directly from ViaRail. More information is available on the <a href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada" target="_blank">ViaRail corporate discount page.</a> </p>
+                        <p>You may use government code <strong>700804</strong> to receive an 11% discount purchasing directly from VIA Rail. More information is available on the <a href="https://www.viarail.ca/en/fares-and-packages/business-travel/corporate-fares/government-canada" target="_blank">VIA Rail corporate discount page.</a> </p>
                         <br />
 
 
