--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                             <li>Is parking included (if needed?)</li>
                                             <li>Ask whether a government rate is available</li>
                                             <li>Do not select a non-refundable/pre-paid rate</li>
-                                            <li>Some departments do not want their employees staying in AirBnbs. Ask before booking if you're unsure.</li>
+                                            <li>Some departments do not want their employees staying in Airbnbs. Ask before booking if you're unsure.</li>
                                         </ul>
                                         <p>Expense claim considerations: </p>
                                         <ul><li>Provide an explanation in your expense report if you're unable to adhere to the posted city rates.</li>
@@ -131,7 +131,7 @@
                                 <div class="card-body">
                                     <h4>Paying for your travel</h4>
                                     <div class="card-content" style="margin-left: 23px;">
-                                        <p style="display:inline">
+                                        <p style="display:inline"></p>
                                             <p>You're encouraged to <a href="https://isuite6.hrgworldwide.com/gcportal/en-ca/travelcard/applyforanidtc.aspx" target="_blank">apply for</a> and use an individual designated travel card. </p>
                                             <ul>
                                                 <li>Has a starting limit of $5,000 CDN</li>
@@ -141,6 +141,18 @@
                                             </ul>
                                             <p>If you requested a travel advance, you should receive it within 10 days of the approval of your trip.</p>
                                             
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <br>
+
+                                <div class="card">
+                                <div class="card-body">
+                                    <h4>Issues or emergencies</h4>
+                                    <div class="card-content" style="margin-left: 23px;">
+                                        <p style="display:inline"></p>
+                                            <p>Your safety and wellbeing are important to us. In the event of an issue or emergency while on travel status - for example, if your flight is cancelled or significantly delayed - and you need help, or you don't know what to do, please reach out to your designated pilot contact in finance.</p>
                                         </div>
                                     </div>
                                 </div>
